--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -16,3 +16,5 @@ jobs:
       - name: "Automated Version Bump"
         id: version-bump
         uses: "phips28/gh-action-bump-version@master"
+        with:
+          tag-prefix: "v"
