--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,13 @@
-name: main
+name: test
 
 on:
-  push:
-    branches: [main]
   pull_request:
     branches: [main]
 
   workflow_dispatch:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
