--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -15,8 +15,12 @@ jobs:
     steps:
       - name: "Checkout source code"
         uses: "actions/checkout@v2"
+        with:
+          token: ${{ secrets.REPO_TOKEN }}
       - name: "Automated Version Bump"
         id: version-bump
         uses: "phips28/gh-action-bump-version@master"
+        env:
+          GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
         with:
           tag-prefix: "v"
