--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "yarn format && git add ."
+            "pre-commit": "yarn format"
         }
     }
 }
