--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "dafka-producer",
-    "version": "2.0.1",
-    "description": "Dockerized kafka producer",
+    "version": "3.2.6",
+    "description": "Dockerized kafka producer ",
     "private": true,
     "repository": {
         "type": "git",
@@ -34,11 +34,11 @@
         "kafka-node": "4.1.3",
         "lodash": "^4.17.15",
         "node-fetch": "^2.6.0",
-        "simple-fake-server-server-client": "^2.0.1",
         "ts-jest": "^24.2.0",
         "tslib": "^1.10.0",
         "typescript": "^3.7.3",
-        "uuid": "^3.3.2"
+        "uuid": "^3.3.2",
+        "wiremock-rest-client": "^1.9.0"
     },
     "devDependencies": {
         "husky": "^3.1.0",
@@ -47,7 +47,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "yarn format && git add ."
+            "pre-commit": "yarn format"
         }
     }
 }
