--- a/tests/dafka.yml
+++ b/tests/dafka.yml
@@ -10,13 +10,12 @@ services:
             - KAFKA_BROKER=kafka:9092
 
     consumer:
-        image: osskit/dafka-consumer:1.0.2
+        image: osskit/dafka-consumer:4.4.9
         ports:
             - 4001:4001
         environment:
             - KAFKA_BROKER=kafka:9092
-            - TOPICS=foo,bar
             - GROUP_ID=consumer_1
-            - SENDING_PROTOCOL=http
-            - TARGET=target:2000/consume
-            - MONITORING_SERVER_PORT=4001        
+            - TARGET_BASE_URL=http://target:8080
+            - TOPICS_ROUTES=foo:/consume
+            - MONITORING_SERVER_PORT=4001
