--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -19,6 +19,12 @@ dependencies:
       modules: [ "classic", "core" ]
       version: "1.3.5"
 
+  ch.qos.logback.contrib:
+    logback:
+      lang: java
+      modules: [ "jackson", "json-classic" ]
+      version: "0.1.5"
+
   com.banno:
     kafka4s:
       lang: scala
@@ -29,10 +35,22 @@ dependencies:
       lang: scala
       version: "1.7.2"
 
+  com.fasterxml.jackson.core:
+    jackson:
+      lang: java
+      modules: [ "annotations", "core", "databind" ]
+      version: "2.15.2"
+
   eu.timepit:
     refined:
       lang: scala
       version: "0.10.3"
+
+  io.circe:
+    circe:
+      lang: scala
+      modules: [ "core", "generic", "parser" ]
+      version: "0.14.1"
 
   is.cir:
     ciris:
@@ -52,6 +70,9 @@ dependencies:
     http4s-server:
       lang: scala
       version: "10.2.0"
+    json-schema-circe:
+      lang: scala
+      version: "2.4.0"
     json-schema-generic:
       lang: scala
       version: "1.10.0"
@@ -61,6 +82,14 @@ dependencies:
       lang: scala
       modules: [ "dsl", "ember-server" ]
       version: "0.23.19"
+    http4s-prometheus-metrics:
+      lang: scala
+      version: "0.23.12"
+
+  org.slf4j:
+    slf4j-api:
+      lang: java
+      version: "2.0.4"
 
   org.typelevel:
     cats:
@@ -70,3 +99,7 @@ dependencies:
     cats-effect:
       lang: scala
       version: "3.4.11"
+    log4cats:
+      lang: scala
+      modules: [ "core", "slf4j" ]
+      version: "2.6.0"
