fix: use balze over ember for server

--- a/3rdparty/jvm/org/http4s/BUILD
+++ b/3rdparty/jvm/org/http4s/BUILD
@@ -1,6 +1,73 @@
 load("@io_bazel_rules_scala//scala:scala_import.bzl", "scala_import")
 load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")
 scala_import(
+    name = "blaze_core",
+    exports = [
+        "//3rdparty/jvm/org/log4s:log4s",
+        "//3rdparty/jvm/org/scala_lang:scala_library"
+    ],
+    jars = [
+        "//external:jar/org/http4s/blaze_core_2_13"
+    ],
+    visibility = [
+        "//3rdparty/jvm:__subpackages__"
+    ]
+)
+
+
+
+scala_import(
+    name = "blaze_http",
+    exports = [
+        "//3rdparty/jvm/com/twitter:hpack",
+        "//3rdparty/jvm/org/scala_lang:scala_library",
+        ":blaze_core"
+    ],
+    jars = [
+        "//external:jar/org/http4s/blaze_http_2_13"
+    ],
+    visibility = [
+        "//3rdparty/jvm:__subpackages__"
+    ]
+)
+
+
+
+scala_import(
+    name = "http4s_blaze_core",
+    exports = [
+        "//3rdparty/jvm/org/scala_lang:scala_library",
+        ":blaze_http",
+        ":http4s_core"
+    ],
+    jars = [
+        "//external:jar/org/http4s/http4s_blaze_core_2_13"
+    ],
+    visibility = [
+        "//3rdparty/jvm:__subpackages__"
+    ]
+)
+
+
+
+scala_import(
+    name = "http4s_blaze_server",
+    exports = [
+        "//3rdparty/jvm/org/scala_lang:scala_library",
+        ":http4s_blaze_core",
+        ":http4s_server"
+    ],
+    jars = [
+        "//external:jar/org/http4s/http4s_blaze_server_2_13"
+    ],
+    visibility = [
+        "//visibility:public"
+    ]
+)
+
+
+
+scala_import(
     name = "http4s_core",
     exports = [
         "//3rdparty/jvm/co/fs2:fs2_core",
@@ -55,42 +122,6 @@ scala_import(
     ],
     jars = [
         "//external:jar/org/http4s/http4s_dsl_2_13"
-    ],
-    visibility = [
-        "//visibility:public"
-    ]
-)
-
-
-
-scala_import(
-    name = "http4s_ember_core",
-    exports = [
-        "//3rdparty/jvm/com/twitter:hpack",
-        "//3rdparty/jvm/org/scala_lang:scala_library",
-        "//3rdparty/jvm/org/typelevel:log4cats_core",
-        ":http4s_core"
-    ],
-    jars = [
-        "//external:jar/org/http4s/http4s_ember_core_2_13"
-    ],
-    visibility = [
-        "//3rdparty/jvm:__subpackages__"
-    ]
-)
-
-
-
-scala_import(
-    name = "http4s_ember_server",
-    exports = [
-        "//3rdparty/jvm/org/scala_lang:scala_library",
-        "//3rdparty/jvm/org/typelevel:log4cats_slf4j",
-        ":http4s_ember_core",
-        ":http4s_server"
-    ],
-    jars = [
-        "//external:jar/org/http4s/http4s_ember_server_2_13"
     ],
     visibility = [
         "//visibility:public"
