--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "devDependencies": {
         "@osskit/fetch-enhancers": "^4.1.0",
         "@osskit/tsconfig": "^0.0.6",
+        "@testcontainers/kafka": "^10.2.2",
         "@types/lodash-es": "^4.17.7",
         "husky": "^3.1.0",
         "kafkajs": "^2.2.4",
@@ -47,7 +48,7 @@
         "p-retry": "^5.1.2",
         "prettier": "^2.3.2",
         "prettier-plugin-java": "^1.3.0",
-        "testcontainers": "^9.6.0",
+        "testcontainers": "^10.2.2",
         "ts-node": "^10.9.1"
     },
     "husky": {
