--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@osskit/wiremock-client": "^4.3.1",
+        "@testcontainers/kafka": "^10.2.2",
         "@types/jest": "^24.0.12",
         "@types/lodash": "^4.14.149",
         "@types/node": "^18.16.3",
@@ -47,7 +48,7 @@
         "p-retry": "^5.1.2",
         "prettier": "^2.3.2",
         "prettier-plugin-java": "^1.3.0",
-        "testcontainers": "^9.6.0",
+        "testcontainers": "^10.2.2",
         "ts-node": "^10.9.1"
     },
     "husky": {
